--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -52,9 +52,9 @@ ol {
   align-items: center;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  background-color: #1B1919;
+  background-color: #1b1919;
   inline-size: 1200px;
   block-size: 100%;
 }
@@ -68,8 +68,8 @@ ol {
 
 .content__list {
   position: relative;
-  overflow-y: scroll;
   height: 298px;
+  overflow-y: scroll;
 }
 
 .content__list::-webkit-scrollbar {
@@ -95,7 +95,7 @@ ol {
 }
 
 .content__card-link:hover {
-  text-decoration: underline 1px #FFF;
+  text-decoration: underline 1px #fff;
 }
 
 .content__card-link:focus {
@@ -103,16 +103,16 @@ ol {
 }
 
 .content__card-link:focus-visible {
-  outline: 1px solid #FFF;
+  outline: 1px solid #fff;
 }
 
 .title {
   padding-bottom: 26px;
-  color: #FFF;
+  color: #fff;
   font-family: Oswald;
+  font-weight: 700;
   font-size: 75px;
   font-style: normal;
-  font-weight: 700;
   line-height: 94%;
   text-transform: uppercase;
 }
@@ -128,29 +128,29 @@ ol {
 .content__video-card {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .content__video-card-title {
   padding: 2px;
-  color: #FFF;
+  color: #fff;
   font-family: Oswald;
+  font-weight: 700;
   font-size: 30px;
   font-style: normal;
-  font-weight: 700;
-  line-height: 100%; 
+  line-height: 100%;
   text-transform: uppercase;
 }
 
 .content__video-card-description {
   padding: 2px;
-  color: #FFF;
+  color: #fff;
   font-family: Fira Sans Condensed;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 16.2px; 
+  line-height: 16.2px;
 }
 
 .content__video-card-thumbnail {
@@ -164,16 +164,16 @@ ol {
 }
 
 .result__video {
-  inline-size: 100%;
-  block-size: 100%;
   object-fit: cover;
   object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .result__video-container {
   position: relative;
-  inline-size: 711px;
   margin-bottom: 11px;
+  inline-size: 711px;
 }
 
 .search-form {
@@ -183,10 +183,10 @@ ol {
 }
 
 .search-form__fieldset {
+  position: relative;
   display: inline-flex;
   flex-direction: column;
   gap: 5px;
-  position: relative;
   border: none;
 }
 
@@ -199,30 +199,30 @@ ol {
   display: flex;
   width: 225px;
   height: 27px;
-  color: rgba(255, 255, 255, 0.70);
-  background-color: transparent;
+  border-top: 1px solid #fff;
+  border-right: none;
+  border-bottom: 1px solid #fff;
+  border-left: none;
+  outline: none;
+  color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
+  font-weight: inherit;
   font-size: inherit;
   font-style: inherit;
-  font-weight: inherit;
   line-height: normal;
-  border-top: 1px solid #FFF;
-  border-right: none;
-  border-bottom: 1px solid #FFF;
-  border-left: none;
+  background-color: transparent;
   appearance: none;
-  outline: none;
 }
 
 .search-form__textfield::placeholder {
-  color: rgba(255, 255, 255, 0.70);
+  color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
   font-weight: inherit;
   font-size: inherit;
 }
 
 .search-form__textfield:active {
-  outline: 1px solid #FFF;
+  outline: 1px solid #fff;
 }
 
 .search-form__textfield:focus {
@@ -235,19 +235,19 @@ ol {
 
 .search-form__label {
   display: flex;
-  padding-top: 2px;
   gap: 5px;
-  cursor: pointer;
   width: fit-content;
+  padding-top: 2px;
+  cursor: pointer;
 }
 
 .search-form__label:hover {
-  text-decoration: underline 1px #FFF;
+  text-decoration: underline 1px #fff;
   text-underline-offset: 5px;
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: 1px solid #FFF;
+  outline: 1px solid #fff;
   outline-offset: 1px;
 }
 
@@ -258,36 +258,36 @@ ol {
 
 .search-form__pseudo-checkbox {
   display: inline-block;
-  border: 1px solid #FFF;
   width: 19px;
   height: 19px;
+  border: 1px solid #fff;
   padding: 1px;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: '';
+  content: "";
   display: block;
   width: 15px;
   height: 15px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .search-form__submit-button {
   align-self: flex-end;
   width: 194px;
   height: 34px;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
 }
 
 .button {
-  color: #FFF;
-  background-color: transparent;
-  text-align: center;
+  color: #fff;
   font-family: Fira Sans Condensed;
+  font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  font-weight: 700;
   line-height: normal;
+  text-align: center;
+  background-color: transparent;
   cursor: pointer;
   inline-size: 100%;
 }
@@ -297,7 +297,7 @@ ol {
 }
 
 .button:hover {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
 .button:focus {
@@ -305,12 +305,12 @@ text-decoration: underline;
 }
 
 .button:focus-visible {
-  outline: 1px solid #FFF;
+  outline: 1px solid #fff;
 }
 
 .more-button {
-  border: 1px solid #FFF;
   height: 34px;
+  border: 1px solid #fff;
 }
 
 .more-button:active {
@@ -326,5 +326,5 @@ text-decoration: underline;
 }
 
 .more-button:focus-visible {
-  outline: 1px solid #FFF;
+  outline: 1px solid #fff;
 }
