--- a/styles/style.css
+++ b/styles/style.css
@@ -202,17 +202,19 @@ ol {
 }
 
 .search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
   font-weight: inherit;
   font-size: inherit;
 }
 
 .search-form__textfield:active {
-  outline: 1px solid #fff;
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
 }
 
 .search-form__textfield:focus {
-  outline: none;
+  outline: 1px solid #fff;
 }
 
 .search-form__textfield:focus-visible {
@@ -223,7 +225,6 @@ ol {
   display: flex;
   gap: 5px;
   width: fit-content;
-  padding-top: 2px;
   cursor: pointer;
 }
 
@@ -234,8 +235,8 @@ ol {
 
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
-  outline-offset: 1px;
-}
+  outline-offset: 2px;
+  }
 
 .search-form__checkbox-list {
   display: flex;
