--- a/styles/style.css
+++ b/styles/style.css
@@ -186,10 +186,9 @@ ol {
   display: flex;
   width: 225px;
   height: 27px;
-  border-top: 1px solid #fff;
-  border-right: none;
-  border-bottom: 1px solid #fff;
-  border-left: none;
+  border: none;
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
   outline: none;
   color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
@@ -208,24 +207,17 @@ ol {
   font-size: inherit;
 }
 
-.search-form__textfield:active {
-  border-right: 1px solid #fff;
-  border-left: 1px solid #fff;
-}
-
-.search-form__textfield:focus {
-  outline: 1px solid #fff;
-}
-
-.search-form__textfield:focus-visible {
-  outline: none;
-}
-
 .search-form__label {
   display: flex;
   gap: 5px;
   width: fit-content;
   cursor: pointer;
+}
+
+.search-form__label:has(.search-form__textfield:active) {
+  outline: none;
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
 }
 
 .search-form__label:hover {
